tests/negative/gold/setting_non_existing_field_test.gold
tests/negative/setting_non_existing_field_test.toit:6:15: error: Couldn't find field for field-storing parameter 'x'
  constructor .x:
              ^~
tests/negative/setting_non_existing_field_test.toit:7:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/setting_non_existing_field_test.toit:12:14: error: Field-storing parameter not allowed in static functions
  static bar .x:
             ^~
tests/negative/setting_non_existing_field_test.toit:13:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/setting_non_existing_field_test.toit:9:7: error: Unresolved target for field-storing parameter
  foo .x:
      ^~
tests/negative/setting_non_existing_field_test.toit:10:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
Compilation failed.
